y.output
Terminais sem uso na gramática

   COMMENT
   INT
   REAL
   STRING
   BOOLEAN
   NIL
   INCREMENT
   DECREMENT


Estado 151 conflitos: 13 de deslocamento/redução
Estado 242 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: declaration $end

    1 declaration: var declaration
    2            | const declaration
    3            | subprogram declaration
    4            | %empty

    5 $@1: %empty

    6 $@2: %empty

    7 var: VAR $@1 IDENTIFIER $@2 id_exp ids_exps

    8 $@3: %empty

    9 id_exp: EQUAL $@3 expression
   10       | %empty

   11 $@4: %empty

   12 $@5: %empty

   13 ids_exps: COMMA $@4 IDENTIFIER $@5 id_exp ids_exps
   14         | %empty

   15 $@6: %empty

   16 $@7: %empty

   17 $@8: %empty

   18 const: CONST $@6 IDENTIFIER $@7 EQUAL $@8 expression const_aux

   19 $@9: %empty

   20 $@10: %empty

   21 $@11: %empty

   22 const_aux: COMMA $@9 IDENTIFIER $@10 EQUAL $@11 expression const_aux
   23          | %empty

   24 subprogram: procedure
   25           | function

   26 $@12: %empty

   27 $@13: %empty

   28 $@14: %empty

   29 $@15: %empty

   30 procedure: PROCEDURE $@12 IDENTIFIER $@13 OPEN_PARENTHESIS $@14 parameter_list CLOSE_PARENTHESIS $@15 block

   31 $@16: %empty

   32 $@17: %empty

   33 $@18: %empty

   34 $@19: %empty

   35 function: FUNCTION $@16 IDENTIFIER $@17 OPEN_PARENTHESIS $@18 parameter_list CLOSE_PARENTHESIS $@19 block

   36 $@20: %empty

   37 parameter_list: IDENTIFIER $@20 parameter_list_aux

   38 $@21: %empty

   39 $@22: %empty

   40 parameter_list: REF $@21 IDENTIFIER $@22 parameter_list_aux
   41               | %empty

   42 $@23: %empty

   43 parameter_list_aux: COMMA $@23 parameter_list
   44                   | %empty

   45 cb: command
   46   | block

   47 $@24: %empty

   48 block: declaration INIT $@24 commands FINAL

   49 command: access_n_call
   50        | return
   51        | break
   52        | if
   53        | switch
   54        | loop
   55        | exit
   56        | for

   57 commands: command commands_aux

   58 $@25: %empty

   59 commands_aux: SEMICOLON $@25 commands
   60             | %empty

   61 $@26: %empty

   62 access_n_call: IDENTIFIER $@26 access_n_call_aux

   63 access_n_call_aux: access
   64                  | attribuition
   65                  | subprogram_call

   66 $@27: %empty

   67 $@28: %empty

   68 access: DOT $@27 IDENTIFIER $@28 access_n_call_aux

   69 $@29: %empty

   70 $@30: %empty

   71 access: OPEN_BRACKETS $@29 l_exp CLOSE_BRACKETS $@30 access_n_call_aux
   72       | %empty

   73 $@31: %empty

   74 attribuition: EQUAL $@31 expression

   75 $@32: %empty

   76 subprogram_call: OPEN_PARENTHESIS $@32 real_parameter_list CLOSE_PARENTHESIS

   77 $@33: %empty

   78 $@34: %empty

   79 real_parameter_list: REF $@33 IDENTIFIER $@34 real_parameter_list_aux
   80                    | expression real_parameter_list_aux
   81                    | %empty

   82 $@35: %empty

   83 real_parameter_list_aux: COMMA $@35 real_parameter_list
   84                        | %empty

   85 l_exp: expression l_exp_aux

   86 $@36: %empty

   87 l_exp_aux: COMMA $@36 l_exp
   88          | %empty

   89 $@37: %empty

   90 return: RETURN $@37 return_aux

   91 return_aux: expression
   92           | %empty

   93 break: BREAK

   94 $@38: %empty

   95 $@39: %empty

   96 $@40: %empty

   97 $@41: %empty

   98 if: IF $@38 OPEN_PARENTHESIS $@39 expression CLOSE_PARENTHESIS $@40 THEN $@41 cb else

   99 $@42: %empty

  100 else: ELSE_ $@42 cb
  101     | %empty

  102 $@43: %empty

  103 $@44: %empty

  104 $@45: %empty

  105 $@46: %empty

  106 switch: SWITCH $@43 OPEN_PARENTHESIS $@44 access_n_call CLOSE_PARENTHESIS $@45 INIT $@46 caselist default FINAL

  107 $@47: %empty

  108 $@48: %empty

  109 caselist: CASE $@47 expression COLON $@48 commands caselist
  110         | %empty

  111 $@49: %empty

  112 $@50: %empty

  113 default: DEFAULT $@49 COLON $@50 commands
  114        | %empty

  115 $@51: %empty

  116 $@52: %empty

  117 $@53: %empty

  118 $@54: %empty

  119 for: FOR $@51 IDENTIFIER $@52 EQUAL $@53 expression for_aux expression DO $@54 cb

  120 for_aux: TO
  121        | DOWNTO

  122 $@55: %empty

  123 loop: LOOP $@55 commands FINAL

  124 $@56: %empty

  125 $@57: %empty

  126 $@58: %empty

  127 exit: EXIT $@56 WHEN $@57 OPEN_PARENTHESIS $@58 expression CLOSE_PARENTHESIS

  128 $@59: %empty

  129 expression: expression OR $@59 expression

  130 $@60: %empty

  131 expression: expression AND $@60 expression

  132 $@61: %empty

  133 expression: expression EQUAL_LOGIC $@61 expression

  134 $@62: %empty

  135 expression: expression NOT_EQUAL $@62 expression

  136 $@63: %empty

  137 expression: expression LESS_THEN $@63 expression

  138 $@64: %empty

  139 expression: expression BIGGER_THEN $@64 expression

  140 $@65: %empty

  141 expression: expression LESS_EQUAL $@65 expression

  142 $@66: %empty

  143 expression: expression BIGGER_EQUAL $@66 expression

  144 $@67: %empty

  145 expression: expression ADD $@67 expression

  146 $@68: %empty

  147 expression: expression SUB $@68 expression

  148 $@69: %empty

  149 expression: expression MULT $@69 expression

  150 $@70: %empty

  151 expression: expression DIV $@70 expression

  152 $@71: %empty

  153 expression: expression MOD $@71 expression

  154 $@72: %empty

  155 expression: '-' $@72 expression

  156 $@73: %empty

  157 expression: NEGATION $@73 expression

  158 $@74: %empty

  159 expression: OPEN_PARENTHESIS $@74 expression CLOSE_PARENTHESIS
  160           | access_n_call
  161           | arr_exp
  162           | literal

  163 $@75: %empty

  164 arr_exp: OPEN_BRACES $@75 literal arr_exp_aux CLOSE_BRACES

  165 $@76: %empty

  166 arr_exp_aux: COMMA $@76 literal arr_exp_aux
  167            | %empty

  168 literal: STRING_LIT
  169        | NUMBER_INT
  170        | NUMBER_REAL
  171        | TRUE
  172        | FALSE


Terminais, com as regras onde eles aparecem

$end (0) 0
'-' (45) 155
error (256)
IDENTIFIER (258) 7 13 18 22 30 35 37 40 62 68 79 119
STRING_LIT (259) 168
NUMBER_INT (260) 169
NUMBER_REAL (261) 170
COMMENT (262)
PROCEDURE (263) 30
FUNCTION (264) 35
REF (265) 40 79
VAR (266) 7
CONST (267) 18
INT (268)
REAL (269)
STRING (270)
BOOLEAN (271)
TRUE (272) 171
FALSE (273) 172
NIL (274)
INIT (275) 48 106
FINAL (276) 48 106 123
RETURN (277) 90
BREAK (278) 93
IF (279) 98
THEN (280) 98
ELSE_ (281) 100
SWITCH (282) 106
CASE (283) 109
DEFAULT (284) 113
FOR (285) 119
DOWNTO (286) 121
TO (287) 120
DO (288) 119
LOOP (289) 123
EXIT (290) 127
WHEN (291) 127
SEMICOLON (292) 59
COLON (293) 109 113
COMMA (294) 13 22 43 83 87 166
DOT (295) 68
OPEN_PARENTHESIS (296) 30 35 76 98 106 127 159
CLOSE_PARENTHESIS (297) 30 35 76 98 106 127 159
OPEN_BRACKETS (298) 71
CLOSE_BRACKETS (299) 71
OPEN_BRACES (300) 164
CLOSE_BRACES (301) 164
ADD (302) 145
SUB (303) 147
MULT (304) 149
DIV (305) 151
MOD (306) 153
INCREMENT (307)
DECREMENT (308)
EQUAL (309) 9 18 22 74 119
NEGATION (310) 157
OR (311) 129
AND (312) 131
LESS_THEN (313) 137
BIGGER_THEN (314) 139
EQUAL_LOGIC (315) 133
NOT_EQUAL (316) 135
LESS_EQUAL (317) 141
BIGGER_EQUAL (318) 143
UMINUS (319)


Não terminais com as regras onde eles aparecem

$accept (66)
    à esquerda: 0
declaration (67)
    à esquerda: 1 2 3 4, à direita: 0 1 2 3 48
var (68)
    à esquerda: 7, à direita: 1
$@1 (69)
    à esquerda: 5, à direita: 7
$@2 (70)
    à esquerda: 6, à direita: 7
id_exp (71)
    à esquerda: 9 10, à direita: 7 13
$@3 (72)
    à esquerda: 8, à direita: 9
ids_exps (73)
    à esquerda: 13 14, à direita: 7 13
$@4 (74)
    à esquerda: 11, à direita: 13
$@5 (75)
    à esquerda: 12, à direita: 13
const (76)
    à esquerda: 18, à direita: 2
$@6 (77)
    à esquerda: 15, à direita: 18
$@7 (78)
    à esquerda: 16, à direita: 18
$@8 (79)
    à esquerda: 17, à direita: 18
const_aux (80)
    à esquerda: 22 23, à direita: 18 22
$@9 (81)
    à esquerda: 19, à direita: 22
$@10 (82)
    à esquerda: 20, à direita: 22
$@11 (83)
    à esquerda: 21, à direita: 22
subprogram (84)
    à esquerda: 24 25, à direita: 3
procedure (85)
    à esquerda: 30, à direita: 24
$@12 (86)
    à esquerda: 26, à direita: 30
$@13 (87)
    à esquerda: 27, à direita: 30
$@14 (88)
    à esquerda: 28, à direita: 30
$@15 (89)
    à esquerda: 29, à direita: 30
function (90)
    à esquerda: 35, à direita: 25
$@16 (91)
    à esquerda: 31, à direita: 35
$@17 (92)
    à esquerda: 32, à direita: 35
$@18 (93)
    à esquerda: 33, à direita: 35
$@19 (94)
    à esquerda: 34, à direita: 35
parameter_list (95)
    à esquerda: 37 40 41, à direita: 30 35 43
$@20 (96)
    à esquerda: 36, à direita: 37
$@21 (97)
    à esquerda: 38, à direita: 40
$@22 (98)
    à esquerda: 39, à direita: 40
parameter_list_aux (99)
    à esquerda: 43 44, à direita: 37 40
$@23 (100)
    à esquerda: 42, à direita: 43
cb (101)
    à esquerda: 45 46, à direita: 98 100 119
block (102)
    à esquerda: 48, à direita: 30 35 46
$@24 (103)
    à esquerda: 47, à direita: 48
command (104)
    à esquerda: 49 50 51 52 53 54 55 56, à direita: 45 57
commands (105)
    à esquerda: 57, à direita: 48 59 109 113 123
commands_aux (106)
    à esquerda: 59 60, à direita: 57
$@25 (107)
    à esquerda: 58, à direita: 59
access_n_call (108)
    à esquerda: 62, à direita: 49 106 160
$@26 (109)
    à esquerda: 61, à direita: 62
access_n_call_aux (110)
    à esquerda: 63 64 65, à direita: 62 68 71
access (111)
    à esquerda: 68 71 72, à direita: 63
$@27 (112)
    à esquerda: 66, à direita: 68
$@28 (113)
    à esquerda: 67, à direita: 68
$@29 (114)
    à esquerda: 69, à direita: 71
$@30 (115)
    à esquerda: 70, à direita: 71
attribuition (116)
    à esquerda: 74, à direita: 64
$@31 (117)
    à esquerda: 73, à direita: 74
subprogram_call (118)
    à esquerda: 76, à direita: 65
$@32 (119)
    à esquerda: 75, à direita: 76
real_parameter_list (120)
    à esquerda: 79 80 81, à direita: 76 83
$@33 (121)
    à esquerda: 77, à direita: 79
$@34 (122)
    à esquerda: 78, à direita: 79
real_parameter_list_aux (123)
    à esquerda: 83 84, à direita: 79 80
$@35 (124)
    à esquerda: 82, à direita: 83
l_exp (125)
    à esquerda: 85, à direita: 71 87
l_exp_aux (126)
    à esquerda: 87 88, à direita: 85
$@36 (127)
    à esquerda: 86, à direita: 87
return (128)
    à esquerda: 90, à direita: 50
$@37 (129)
    à esquerda: 89, à direita: 90
return_aux (130)
    à esquerda: 91 92, à direita: 90
break (131)
    à esquerda: 93, à direita: 51
if (132)
    à esquerda: 98, à direita: 52
$@38 (133)
    à esquerda: 94, à direita: 98
$@39 (134)
    à esquerda: 95, à direita: 98
$@40 (135)
    à esquerda: 96, à direita: 98
$@41 (136)
    à esquerda: 97, à direita: 98
else (137)
    à esquerda: 100 101, à direita: 98
$@42 (138)
    à esquerda: 99, à direita: 100
switch (139)
    à esquerda: 106, à direita: 53
$@43 (140)
    à esquerda: 102, à direita: 106
$@44 (141)
    à esquerda: 103, à direita: 106
$@45 (142)
    à esquerda: 104, à direita: 106
$@46 (143)
    à esquerda: 105, à direita: 106
caselist (144)
    à esquerda: 109 110, à direita: 106 109
$@47 (145)
    à esquerda: 107, à direita: 109
$@48 (146)
    à esquerda: 108, à direita: 109
default (147)
    à esquerda: 113 114, à direita: 106
$@49 (148)
    à esquerda: 111, à direita: 113
$@50 (149)
    à esquerda: 112, à direita: 113
for (150)
    à esquerda: 119, à direita: 56
$@51 (151)
    à esquerda: 115, à direita: 119
$@52 (152)
    à esquerda: 116, à direita: 119
$@53 (153)
    à esquerda: 117, à direita: 119
$@54 (154)
    à esquerda: 118, à direita: 119
for_aux (155)
    à esquerda: 120 121, à direita: 119
loop (156)
    à esquerda: 123, à direita: 54
$@55 (157)
    à esquerda: 122, à direita: 123
exit (158)
    à esquerda: 127, à direita: 55
$@56 (159)
    à esquerda: 124, à direita: 127
$@57 (160)
    à esquerda: 125, à direita: 127
$@58 (161)
    à esquerda: 126, à direita: 127
expression (162)
    à esquerda: 129 131 133 135 137 139 141 143 145 147 149 151 153
    155 157 159 160 161 162, à direita: 9 18 22 74 80 85 91 98 109
    119 127 129 131 133 135 137 139 141 143 145 147 149 151 153 155
    157 159
$@59 (163)
    à esquerda: 128, à direita: 129
$@60 (164)
    à esquerda: 130, à direita: 131
$@61 (165)
    à esquerda: 132, à direita: 133
$@62 (166)
    à esquerda: 134, à direita: 135
$@63 (167)
    à esquerda: 136, à direita: 137
$@64 (168)
    à esquerda: 138, à direita: 139
$@65 (169)
    à esquerda: 140, à direita: 141
$@66 (170)
    à esquerda: 142, à direita: 143
$@67 (171)
    à esquerda: 144, à direita: 145
$@68 (172)
    à esquerda: 146, à direita: 147
$@69 (173)
    à esquerda: 148, à direita: 149
$@70 (174)
    à esquerda: 150, à direita: 151
$@71 (175)
    à esquerda: 152, à direita: 153
$@72 (176)
    à esquerda: 154, à direita: 155
$@73 (177)
    à esquerda: 156, à direita: 157
$@74 (178)
    à esquerda: 158, à direita: 159
arr_exp (179)
    à esquerda: 164, à direita: 161
$@75 (180)
    à esquerda: 163, à direita: 164
arr_exp_aux (181)
    à esquerda: 166 167, à direita: 164 166
$@76 (182)
    à esquerda: 165, à direita: 166
literal (183)
    à esquerda: 168 169 170 171 172, à direita: 162 164 166


Estado 0

    0 $accept: . declaration $end

    PROCEDURE  deslocar, e ir ao estado 1
    FUNCTION   deslocar, e ir ao estado 2
    VAR        deslocar, e ir ao estado 3
    CONST      deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 4 (declaration)

    declaration  ir ao estado 5
    var          ir ao estado 6
    const        ir ao estado 7
    subprogram   ir ao estado 8
    procedure    ir ao estado 9
    function     ir ao estado 10


Estado 1

   30 procedure: PROCEDURE . $@12 IDENTIFIER $@13 OPEN_PARENTHESIS $@14 parameter_list CLOSE_PARENTHESIS $@15 block

    $padrão  reduzir usando a regra 26 ($@12)

    $@12  ir ao estado 11


Estado 2

   35 function: FUNCTION . $@16 IDENTIFIER $@17 OPEN_PARENTHESIS $@18 parameter_list CLOSE_PARENTHESIS $@19 block

    $padrão  reduzir usando a regra 31 ($@16)

    $@16  ir ao estado 12


Estado 3

    7 var: VAR . $@1 IDENTIFIER $@2 id_exp ids_exps

    $padrão  reduzir usando a regra 5 ($@1)

    $@1  ir ao estado 13


Estado 4

   18 const: CONST . $@6 IDENTIFIER $@7 EQUAL $@8 expression const_aux

    $padrão  reduzir usando a regra 15 ($@6)

    $@6  ir ao estado 14


Estado 5

    0 $accept: declaration . $end

    $end  deslocar, e ir ao estado 15


Estado 6

    1 declaration: var . declaration

    PROCEDURE  deslocar, e ir ao estado 1
    FUNCTION   deslocar, e ir ao estado 2
    VAR        deslocar, e ir ao estado 3
    CONST      deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 4 (declaration)

    declaration  ir ao estado 16
    var          ir ao estado 6
    const        ir ao estado 7
    subprogram   ir ao estado 8
    procedure    ir ao estado 9
    function     ir ao estado 10


Estado 7

    2 declaration: const . declaration

    PROCEDURE  deslocar, e ir ao estado 1
    FUNCTION   deslocar, e ir ao estado 2
    VAR        deslocar, e ir ao estado 3
    CONST      deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 4 (declaration)

    declaration  ir ao estado 17
    var          ir ao estado 6
    const        ir ao estado 7
    subprogram   ir ao estado 8
    procedure    ir ao estado 9
    function     ir ao estado 10


Estado 8

    3 declaration: subprogram . declaration

    PROCEDURE  deslocar, e ir ao estado 1
    FUNCTION   deslocar, e ir ao estado 2
    VAR        deslocar, e ir ao estado 3
    CONST      deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 4 (declaration)

    declaration  ir ao estado 18
    var          ir ao estado 6
    const        ir ao estado 7
    subprogram   ir ao estado 8
    procedure    ir ao estado 9
    function     ir ao estado 10


Estado 9

   24 subprogram: procedure .

    $padrão  reduzir usando a regra 24 (subprogram)


Estado 10

   25 subprogram: function .

    $padrão  reduzir usando a regra 25 (subprogram)


Estado 11

   30 procedure: PROCEDURE $@12 . IDENTIFIER $@13 OPEN_PARENTHESIS $@14 parameter_list CLOSE_PARENTHESIS $@15 block

    IDENTIFIER  deslocar, e ir ao estado 19


Estado 12

   35 function: FUNCTION $@16 . IDENTIFIER $@17 OPEN_PARENTHESIS $@18 parameter_list CLOSE_PARENTHESIS $@19 block

    IDENTIFIER  deslocar, e ir ao estado 20


Estado 13

    7 var: VAR $@1 . IDENTIFIER $@2 id_exp ids_exps

    IDENTIFIER  deslocar, e ir ao estado 21


Estado 14

   18 const: CONST $@6 . IDENTIFIER $@7 EQUAL $@8 expression const_aux

    IDENTIFIER  deslocar, e ir ao estado 22


Estado 15

    0 $accept: declaration $end .

    $padrão  aceitar


Estado 16

    1 declaration: var declaration .

    $padrão  reduzir usando a regra 1 (declaration)


Estado 17

    2 declaration: const declaration .

    $padrão  reduzir usando a regra 2 (declaration)


Estado 18

    3 declaration: subprogram declaration .

    $padrão  reduzir usando a regra 3 (declaration)


Estado 19

   30 procedure: PROCEDURE $@12 IDENTIFIER . $@13 OPEN_PARENTHESIS $@14 parameter_list CLOSE_PARENTHESIS $@15 block

    $padrão  reduzir usando a regra 27 ($@13)

    $@13  ir ao estado 23


Estado 20

   35 function: FUNCTION $@16 IDENTIFIER . $@17 OPEN_PARENTHESIS $@18 parameter_list CLOSE_PARENTHESIS $@19 block

    $padrão  reduzir usando a regra 32 ($@17)

    $@17  ir ao estado 24


Estado 21

    7 var: VAR $@1 IDENTIFIER . $@2 id_exp ids_exps

    $padrão  reduzir usando a regra 6 ($@2)

    $@2  ir ao estado 25


Estado 22

   18 const: CONST $@6 IDENTIFIER . $@7 EQUAL $@8 expression const_aux

    $padrão  reduzir usando a regra 16 ($@7)

    $@7  ir ao estado 26


Estado 23

   30 procedure: PROCEDURE $@12 IDENTIFIER $@13 . OPEN_PARENTHESIS $@14 parameter_list CLOSE_PARENTHESIS $@15 block

    OPEN_PARENTHESIS  deslocar, e ir ao estado 27


Estado 24

   35 function: FUNCTION $@16 IDENTIFIER $@17 . OPEN_PARENTHESIS $@18 parameter_list CLOSE_PARENTHESIS $@19 block

    OPEN_PARENTHESIS  deslocar, e ir ao estado 28


Estado 25

    7 var: VAR $@1 IDENTIFIER $@2 . id_exp ids_exps

    EQUAL  deslocar, e ir ao estado 29

    $padrão  reduzir usando a regra 10 (id_exp)

    id_exp  ir ao estado 30


Estado 26

   18 const: CONST $@6 IDENTIFIER $@7 . EQUAL $@8 expression const_aux

    EQUAL  deslocar, e ir ao estado 31


Estado 27

   30 procedure: PROCEDURE $@12 IDENTIFIER $@13 OPEN_PARENTHESIS . $@14 parameter_list CLOSE_PARENTHESIS $@15 block

    $padrão  reduzir usando a regra 28 ($@14)

    $@14  ir ao estado 32


Estado 28

   35 function: FUNCTION $@16 IDENTIFIER $@17 OPEN_PARENTHESIS . $@18 parameter_list CLOSE_PARENTHESIS $@19 block

    $padrão  reduzir usando a regra 33 ($@18)

    $@18  ir ao estado 33


Estado 29

    9 id_exp: EQUAL . $@3 expression

    $padrão  reduzir usando a regra 8 ($@3)

    $@3  ir ao estado 34


Estado 30

    7 var: VAR $@1 IDENTIFIER $@2 id_exp . ids_exps

    COMMA  deslocar, e ir ao estado 35

    $padrão  reduzir usando a regra 14 (ids_exps)

    ids_exps  ir ao estado 36


Estado 31

   18 const: CONST $@6 IDENTIFIER $@7 EQUAL . $@8 expression const_aux

    $padrão  reduzir usando a regra 17 ($@8)

    $@8  ir ao estado 37


Estado 32

   30 procedure: PROCEDURE $@12 IDENTIFIER $@13 OPEN_PARENTHESIS $@14 . parameter_list CLOSE_PARENTHESIS $@15 block

    IDENTIFIER  deslocar, e ir ao estado 38
    REF         deslocar, e ir ao estado 39

    $padrão  reduzir usando a regra 41 (parameter_list)

    parameter_list  ir ao estado 40


Estado 33

   35 function: FUNCTION $@16 IDENTIFIER $@17 OPEN_PARENTHESIS $@18 . parameter_list CLOSE_PARENTHESIS $@19 block

    IDENTIFIER  deslocar, e ir ao estado 38
    REF         deslocar, e ir ao estado 39

    $padrão  reduzir usando a regra 41 (parameter_list)

    parameter_list  ir ao estado 41


Estado 34

    9 id_exp: EQUAL $@3 . expression

    IDENTIFIER        deslocar, e ir ao estado 42
    STRING_LIT        deslocar, e ir ao estado 43
    NUMBER_INT        deslocar, e ir ao estado 44
    NUMBER_REAL       deslocar, e ir ao estado 45
    TRUE              deslocar, e ir ao estado 46
    FALSE             deslocar, e ir ao estado 47
    OPEN_PARENTHESIS  deslocar, e ir ao estado 48
    OPEN_BRACES       deslocar, e ir ao estado 49
    NEGATION          deslocar, e ir ao estado 50
    '-'               deslocar, e ir ao estado 51

    access_n_call  ir ao estado 52
    expression     ir ao estado 53
    arr_exp        ir ao estado 54
    literal        ir ao estado 55


Estado 35

   13 ids_exps: COMMA . $@4 IDENTIFIER $@5 id_exp ids_exps

    $padrão  reduzir usando a regra 11 ($@4)

    $@4  ir ao estado 56


Estado 36

    7 var: VAR $@1 IDENTIFIER $@2 id_exp ids_exps .

    $padrão  reduzir usando a regra 7 (var)


Estado 37

   18 const: CONST $@6 IDENTIFIER $@7 EQUAL $@8 . expression const_aux

    IDENTIFIER        deslocar, e ir ao estado 42
    STRING_LIT        deslocar, e ir ao estado 43
    NUMBER_INT        deslocar, e ir ao estado 44
    NUMBER_REAL       deslocar, e ir ao estado 45
    TRUE              deslocar, e ir ao estado 46
    FALSE             deslocar, e ir ao estado 47
    OPEN_PARENTHESIS  deslocar, e ir ao estado 48
    OPEN_BRACES       deslocar, e ir ao estado 49
    NEGATION          deslocar, e ir ao estado 50
    '-'               deslocar, e ir ao estado 51

    access_n_call  ir ao estado 52
    expression     ir ao estado 57
    arr_exp        ir ao estado 54
    literal        ir ao estado 55


Estado 38

   37 parameter_list: IDENTIFIER . $@20 parameter_list_aux

    $padrão  reduzir usando a regra 36 ($@20)

    $@20  ir ao estado 58


Estado 39

   40 parameter_list: REF . $@21 IDENTIFIER $@22 parameter_list_aux

    $padrão  reduzir usando a regra 38 ($@21)

    $@21  ir ao estado 59


Estado 40

   30 procedure: PROCEDURE $@12 IDENTIFIER $@13 OPEN_PARENTHESIS $@14 parameter_list . CLOSE_PARENTHESIS $@15 block

    CLOSE_PARENTHESIS  deslocar, e ir ao estado 60


Estado 41

   35 function: FUNCTION $@16 IDENTIFIER $@17 OPEN_PARENTHESIS $@18 parameter_list . CLOSE_PARENTHESIS $@19 block

    CLOSE_PARENTHESIS  deslocar, e ir ao estado 61


Estado 42

   62 access_n_call: IDENTIFIER . $@26 access_n_call_aux

    $padrão  reduzir usando a regra 61 ($@26)

    $@26  ir ao estado 62


Estado 43

  168 literal: STRING_LIT .

    $padrão  reduzir usando a regra 168 (literal)


Estado 44
